Resolved bug where there was flicker when you sorted while scrolled partway down

--- a/src/components/Todo/TodoList.module.css
+++ b/src/components/Todo/TodoList.module.css
@@ -17,7 +17,6 @@
 }
 
 .front {
-  position: absolute;
   z-index: 2;
   width: 100%;
 }
